--- a/oslab/ssu_convert/Makefile
+++ b/oslab/ssu_convert/Makefile
@@ -1,6 +1,14 @@
+gcc :
+	gcc ssu_convert.c -o ssu_convert
+ssu_convert1 :
+	./ssu_convert q1.java
+ssu_convert2 :
+	./ssu_convert q2.java
+ssu_convert3 :
+	./ssu_convert q3.java
 q1 :
 	gcc q1.c -o q1
 q2 :
-	gcc q2.c Stack.c -o q2
+	gcc q2.c -o q2
 q3 :
 	gcc q3.c -o q3
