--- a/oslab/ssu_convert/Makefile
+++ b/oslab/ssu_convert/Makefile
@@ -1,20 +1,12 @@
 gcc :
 	gcc ssu_convert.c -o ssu_convert
-convert1 :
+
+ssu_convert1 :
 	./ssu_convert q1.java
-convert2 :
+
+ssu_convert2 :
 	./ssu_convert q2.java
-convert3 :
+
+ssu_convert3 :
 	./ssu_convert q3.java
-opt1 :
-	./ssu_convert q1.java -l
-opt2 :
-	./ssu_convert q2.java -f
-opt3 :
-	./ssu_convert q3.java -p
-q1 :
-	gcc q1.c -o q1
-q2 :
-	gcc q2.c -o q2
-q3 :
-	gcc q3.c -o q3
+
